# CorrigeEtape8

./: CMakeLists.txt  azure-pipelines-1.yml  azure-pipelines-linux-windows.yml  azure-pipelines-linux.yml  azure-pipelines-macOS.yml  azure-pipelines-snap.yml  azure-pipelines-windows.yml  azure-pipelines.yml
mainLauncher/: CMakeLists.txt
resources/: visage.xml
src/: Circle.cpp  Circle.h  Drawing.cpp  Drawing.h  Group.cpp  Group.h  SFML_output.cpp  SFML_output.h  Shape.cpp  Shape.h  myMain.cpp
unitTests/: unitTests.cpp
